# gsd-gui

./: CLAUDE.md  GSD-GUI-ARCHITECTURE.md  GSD-UI-ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
.gsd.migrating/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  completed-units.json  doctor-history.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  hook-state.json  metrics.json  preferences.md  repo-meta.json
.gsd.migrating/activity/: 001-plan-slice-M001-S01.jsonl  002-complete-milestone-M001.jsonl  003-complete-milestone-M002.jsonl  004-complete-milestone-M005.jsonl  005-plan-slice-M006-S01.jsonl  006-execute-task-M006-S01-T01.jsonl  007-execute-task-M006-S01-T02.jsonl  008-complete-slice-M006-S01.jsonl  009-plan-slice-M006-S02.jsonl  010-execute-task-M006-S02-T01.jsonl  011-execute-task-M006-S02-T02.jsonl  012-complete-slice-M006-S02.jsonl  013-plan-slice-M006-S03.jsonl  014-execute-task-M006-S03-T01.jsonl  015-execute-task-M006-S03-T02.jsonl  016-complete-slice-M006-S03.jsonl  017-validate-milestone-M006.jsonl  018-complete-milestone-M006.jsonl
.gsd.migrating/forensics/: report-2026-03-24-15-56-08.md
.gsd.migrating/journal/: 2026-03-24.jsonl  2026-03-25.jsonl  2026-03-26.jsonl
e2e/: app-launch.spec.ts  chat-demo.spec.ts  demo-milestones.spec.ts  demo-projects.spec.ts  fixtures.ts  keyboard-shortcuts.spec.ts  pro-tools.spec.ts  routing.spec.ts  settings.spec.ts  sidebar-navigation.spec.ts  smoke.spec.ts  toast-notifications.spec.ts
scripts/: verify-build.sh
src/: App.test.tsx  App.tsx  router.test.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: activity_parser.rs  gsd_detect.rs  gsd_init.rs  gsd_parser.rs  gsd_process.rs  gsd_query.rs  gsd_resolve.rs  gsd_rpc.rs  gsd_update.rs  gsd_watcher.rs  lib.rs  main.rs  preferences_parser.rs  project_registry.rs  session_parser.rs
src-tauri/tests/: gsd_protocol_test.rs
src/components/: theme-provider.test.tsx  theme-provider.tsx
src/hooks/: use-activity.test.ts  use-activity.ts  use-git-branch.ts  use-gsd-events.test.ts  use-gsd-events.ts  use-gsd-state.test.ts  use-gsd-state.ts  use-import-detection.test.ts  use-sessions.ts  (+14 more)
(+323 files in other folders)
