[package]
name = "gsd-ui"
version = "0.0.0"
description = "GSD desktop UI"
authors = ["you"]
license = ""
repository = ""
default-run = "gsd-ui"
edition = "2021"
rust-version = "1.60"

[lib]
name = "gsd_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
