[package]
name = "gsd-gui"
version = "0.0.0"
description = "GSD desktop UI"
authors = ["you"]
license = ""
repository = ""
default-run = "gsd-gui"
edition = "2021"
rust-version = "1.77"

[lib]
name = "gsd_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
notify = { version = "8", features = [] }
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
which = "7"
regex = "1"
tauri-plugin-dialog = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
